--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+
 <body>
-    
+    <div class="parent1">
+        <div id="i1" class="child"></div>
+        <div id="i2" class="child"></div>
+        <div id="i3" class="child"></div>
+        <div id="i4" class="child"></div>
+    </div>
 </body>
+
 </html>
