change container height

--- a/login-page/index.html
+++ b/login-page/index.html
@@ -159,7 +159,7 @@ body {
 
 #container {
     z-index: 1;
-    height: 80vh;
+    min-height: 82vh;
     margin: auto;
     width: 85%;
     display: flex;
@@ -170,9 +170,7 @@ body {
 }
 
 .left-pane {
-    position: relative;
     width: 30.5vw;
-    height: 80vh;
     background: #1aebb6 no-repeat center center fixed;
     display: flex;
     justify-content: center;
@@ -180,8 +178,6 @@ body {
 }
 
 .right-pane {
-    position: relative;
-    height: 80vh;
     width: 100%;
     display: flex;
     justify-content: center;
