add footer style

--- a/navbar-header/2/index.html
+++ b/navbar-header/2/index.html
@@ -11,16 +11,19 @@
 
 <body>
     <header>
-        <img src="" alt="">
+        <a>Logo</a>
         <nav>
             <ul class="nav-links">
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Projects</a></li>
                 <li><a href="#">About</a></li>
+                <li><a href="#">Projects ▾</a></li>
             </ul>
         </nav>
         <a href="#" class="cta"><button>Contact</button></a>
     </header>
+    <footer class="footer">
+        <p>This is the footer</p>
+    </footer>
 </body>
 
 </html>
